src/ui/lidarr_ui/library/snapshots/managarr__ui__lidarr_ui__library__artist_details_ui__artist_details_ui_tests__tests__snapshot_tests__artist_details_ui_renders_delete_album_prompt_over_artist_details.snap
---
source: src/ui/lidarr_ui/library/artist_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
        ╭  Alex  ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮        
        │Artist: Alex                                                                                                                                       │        
        │Overview: some interesting description of the artist She was born in Madison, Wisconsin: a city she has never really left. Her first album took her│        
        │seven years to finish.                                                                                                                             │        
        │Disambiguation: American pianist                                                                                                                   │        
        │Type: Person                                                                                                                                       │        
        │Status: Continuing                                                                                                                                 │        
        │Genres: soundtrack                                                                                                                                 │        
        │Rating: 84%                                                                                                                                        │        
        │Path: /nfs/music/test-artist                                                                                                                       │        
        │Quality Profile: Lossless                                                                                                                          │        
        │Metadata Profile: Standard                                                                                                                         │        
        │Monitored: Yes                                                                                                                                     │        
        │Albums: 1                                 ╭─────────────────────  Delete Album  ──────────────────────╮                                            │        
        │Tracks: 12/15                             │         Do you really want to delete the album:           │                                            │        
        │╭  Artist Details  ───────────────────────│                        Test Album?                        │───────────────────────────────────────────╮│        
        ││ Albums │ History │ Manual Search        │                                                           │                                           ││        
        ││─────────────────────────────────────────│                                                           │───────────────────────────────────────────││        
        ││   Monitored  Title                      │                            ╭───╮                          │  Release Date        Size                 ││        
        ││=> 🏷          Test Album                 │        Delete Album Files: │ ✔ │                          │  2023-01-01          0.00 GB              ││        
        ││                                         │                            ╰───╯                          │                                           ││        
        ││                                         │                            ╭───╮                          │                                           ││        
        ││                                         │        Add List Exclusion: │   │                          │                                           ││        
        ││                                         │                            ╰───╯                          │                                           ││        
        ││                                         │                                                           │                                           ││        
        ││                                         │                                                           │                                           ││        
        ││                                         │                                                           │                                           ││        
        ││                                         │╭────────────────────────────╮╭───────────────────────────╮│                                           ││        
        ││                                         ││             Yes            ││            No             ││                                           ││        
        ││                                         │╰────────────────────────────╯╰───────────────────────────╯│                                           ││        
        ││                                         ╰───────────────────────────────────────────────────────────╯                                           ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        │╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯│        
        ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
